fix: support nullable archived transaction fees